ci: fix kaniko args

--- a/docker/cloudbuild.yaml
+++ b/docker/cloudbuild.yaml
@@ -8,12 +8,12 @@ steps:
     '--build-arg', 'REPO_NAME=$REPO_NAME',
     '--build-arg', 'BRANCH_NAME=$BRANCH_NAME',
     '--build-arg', 'TAG_NAME=$TAG_NAME',
-    '--cache', 'true',
-    '--cache-run-layers', 'true',
-    '--cache-ttl', '48h',
-    '--target', 'graph-node-build',
-    '--destination', 'gcr.io/$PROJECT_ID/graph-node-build:$SHORT_SHA',
-    '--dockerfile', 'docker/Dockerfile',
+    '--cache=true',
+    '--cache-run-layers=true',
+    '--cache-ttl=48h',
+    '--target=graph-node-build',
+    '--destination=gcr.io/$PROJECT_ID/graph-node-build:$SHORT_SHA',
+    '--dockerfile=docker/Dockerfile',
   ]
 - name: 'gcr.io/kaniko-project/executor:latest'
   args: [
@@ -21,12 +21,12 @@ steps:
     '--build-arg', 'REPO_NAME=$REPO_NAME',
     '--build-arg', 'BRANCH_NAME=$BRANCH_NAME',
     '--build-arg', 'TAG_NAME=$TAG_NAME',
-    '--cache', 'true',
-    '--cache-run-layers', 'true',
-    '--cache-ttl', '48h',
-    '--target', 'graph-node',
-    '--destination', 'gcr.io/$PROJECT_ID/graph-node:$SHORT_SHA',
-    '--dockerfile', 'docker/Dockerfile',
+    '--cache=true',
+    '--cache-run-layers=true',
+    '--cache-ttl=48h',
+    '--target=graph-node',
+    '--destination=gcr.io/$PROJECT_ID/graph-node:$SHORT_SHA',
+    '--dockerfile=docker/Dockerfile',
   ]
 - name: 'gcr.io/kaniko-project/executor:latest'
   args: [
@@ -34,12 +34,12 @@ steps:
     '--build-arg', 'REPO_NAME=$REPO_NAME',
     '--build-arg', 'BRANCH_NAME=$BRANCH_NAME',
     '--build-arg', 'TAG_NAME=$TAG_NAME',
-    '--cache', 'true',
-    '--cache-run-layers', 'true',
-    '--cache-ttl', '48h',
-    '--target', 'graph-node-debug',
-    '--destination', 'gcr.io/$PROJECT_ID/graph-node-debug:$SHORT_SHA',
-    '--dockerfile', 'docker/Dockerfile',
+    '--cache=true',
+    '--cache-run-layers=true',
+    '--cache-ttl=48h',
+    '--target=graph-node-debug',
+    '--destination=gcr.io/$PROJECT_ID/graph-node-debug:$SHORT_SHA',
+    '--dockerfile=docker/Dockerfile',
   ]
 - name: 'gcr.io/cloud-builders/docker'
   args: ['tag',
