--- a/docker/cloudbuild.yaml
+++ b/docker/cloudbuild.yaml
@@ -12,6 +12,8 @@ steps:
     '--cache-ttl=96h',
     '--cache-run-layers=true',
     '--cache-repo=gcr.io/$PROJECT_ID/graph-node/cache',
+    '--skip-unused-stages',
+    '--snapshotMode=redo',
     '--target=graph-node',
     '--destination=gcr.io/$PROJECT_ID/graph-node:$SHORT_SHA',
     '--dockerfile=docker/Dockerfile',
@@ -28,6 +30,7 @@ steps:
     # Cache is shared between `graph-node` and `graph-node-debug`, because the
     # build stages are identical.
     '--cache-repo=gcr.io/$PROJECT_ID/graph-node/cache',
+    '--snapshotMode=redo',
     '--target=graph-node-debug',
     '--destination=gcr.io/$PROJECT_ID/graph-node-debug:$SHORT_SHA',
     '--dockerfile=docker/Dockerfile',
