--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,25 +32,18 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
+    env:
+      RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
-
-      - name: Cache cargo registry
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: test-cargo-${{ hashFiles('**/Cargo.toml') }}
+      - uses: Swatinem/rust-cache@v2
 
       - name: Install lld
         run: sudo apt-get install -y lld
 
       - name: Run unit tests
         uses: actions-rs/cargo@v1
-        env:
-          RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
         with:
           command: test
           args: --verbose --workspace --exclude graph-tests -- --nocapture
@@ -75,17 +68,12 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
+    env:
+      RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
-
-      - name: Cache cargo registry
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: test-cargo-${{ hashFiles('**/Cargo.toml') }}
+      - uses: Swatinem/rust-cache@v2
 
       - name: Install lld
         run: sudo apt-get install -y lld
@@ -94,7 +82,6 @@ jobs:
         id: runner-tests-1
         uses: actions-rs/cargo@v1
         env:
-          RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
           TESTS_GANACHE_HARD_WAIT_SECONDS: "30"
         with:
           command: test
@@ -103,33 +90,28 @@ jobs:
   integration-tests:
     name: Run integration tests
     runs-on: ubuntu-latest
-
+    env:
+      RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
-
-      - name: Cache cargo registry
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: test-cargo-${{ hashFiles('**/Cargo.toml') }}
+      - uses: Swatinem/rust-cache@v2
 
       - name: Install Node 14
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: "14"
+          cache: yarn
+          cache-dependency-path: "tests/integration-tests/yarn.lock"
 
       - name: Install lld and jq
         run: sudo apt-get install -y lld jq
 
       - name: Build graph-node
-        env:
-          RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
         uses: actions-rs/cargo@v1
         with:
           command: build
+          args: --bin graph-node
 
       # Integration tests are a bit flaky, running them twice increases the
       # chances of one run succeeding
@@ -137,8 +119,6 @@ jobs:
         id: integration-tests-1
         uses: actions-rs/cargo@v1
         env:
-          RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
-          N_CONCURRENT_TESTS: "1"
           TESTS_GANACHE_HARD_WAIT_SECONDS: "30"
         with:
           command: test
@@ -149,8 +129,6 @@ jobs:
         uses: actions-rs/cargo@v1
         if: ${{ steps.integration-tests-1.outcome == 'failure' }}
         env:
-          RUSTFLAGS: "-C link-arg=-fuse-ld=lld -D warnings"
-          N_CONCURRENT_TESTS: "1"
           TESTS_GANACHE_HARD_WAIT_SECONDS: "30"
         with:
           command: test
@@ -159,13 +137,13 @@ jobs:
   rustfmt:
     name: Check rustfmt style
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: "-D warnings"
     steps:
       - uses: actions/checkout@v2
 
       - name: Check formatting
         uses: actions-rs/cargo@v1
-        env:
-          RUSTFLAGS: "-D warnings"
         with:
           command: fmt
           args: --all -- --check
@@ -177,13 +155,7 @@ jobs:
       - uses: actions/checkout@v2
       # Unlike rustfmt, Clippy actually compiles stuff so it benefits from
       # caching.
-      - name: Cache cargo registry
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: check-cargo-${{ hashFiles('**/Cargo.toml') }}
+      - uses: Swatinem/rust-cache@v2
 
       - name: Run Clippy
         uses: actions-rs/cargo@v1
@@ -192,37 +164,4 @@ jobs:
         continue-on-error: true
         with:
           command: clippy
-
-  release-check:
-    name: Build in release mode
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Cache cargo registry
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: check-cargo-${{ hashFiles('**/Cargo.toml') }}
-
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get -y install libpq-dev
-
-      - name: Cargo check (debug)
-        uses: actions-rs/cargo@v1
-        env:
-          RUSTFLAGS: "-D warnings"
-        with:
-          command: check
-          args: --tests
-
-      - name: Cargo check (release)
-        env:
-          RUSTFLAGS: "-D warnings"
-        uses: actions-rs/cargo@v1
-        with:
-          command: check
-          args: --release
+          args: --no-deps
