split runner build and start

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -16,9 +16,11 @@ graph-core = { path = "../core" }
 graph-mock = { path = "../mock" }
 graph-graphql = { path = "../graphql" }
 graph-store-postgres = { path = "../store/postgres" }
+graph-runtime-wasm = { path = "../runtime/wasm" }
 slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
 graphql-parser = "0.4.0"
 hex = "0.4.3"
+serde_yaml = "0.8"
 
 [dev-dependencies]
 bollard = "0.10"
