--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -11,7 +11,7 @@ graph = { path = "../graph" }
 tokio = { version = "1.16.1", features = ["rt", "macros", "process"] }
 graph-chain-ethereum = { path = "../chain/ethereum" }
 async-stream = "0.3.3"
-graph-node = { path = "../node" }
+graph-node-utils = { path = "../node-utils" }
 graph-core = { path = "../core" }
 graph-mock = { path = "../mock" }
 graph-graphql = { path = "../graphql" }
