--- a/store/test-store/Cargo.toml
+++ b/store/test-store/Cargo.toml
@@ -9,7 +9,7 @@ description = "Provides static store instance for tests."
 graph-graphql = { path = "../../graphql" }
 graphql-parser = "0.4.0"
 graph-mock = { path = "../../mock" }
-graph-node = { path = "../../node" }
+graph-node-utils = { path = "../../node-utils" }
 graph = { path = "../../graph" }
 graph-store-postgres = { path = "../postgres" }
 lazy_static = "1.1"
