docker: use exec form for CMD directive

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -121,4 +121,4 @@ COPY --from=graph-node-build /usr/local/bin/graph-node /usr/local/bin/graphman /
 COPY --from=graph-node-build /etc/image-info /etc/image-info
 COPY --from=envsubst /go/bin/envsubst /usr/local/bin/
 COPY docker/Dockerfile /Dockerfile
-CMD start
+CMD ["start"]
