tests: Test that rewind resets subgraph health
Ports the `fatal-error` test from the legacy test suite to the new test suite,
and extends it to check that the subgraph health is reset to `Healthy` after a rewind.

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -17,10 +17,13 @@ graph-mock = { path = "../mock" }
 graph-graphql = { path = "../graphql" }
 graph-store-postgres = { path = "../store/postgres" }
 graph-runtime-wasm = { path = "../runtime/wasm" }
+graph-server-index-node = { path = "../server/index-node" }
 slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
 graphql-parser = "0.4.0"
 hex = "0.4.3"
 serde_yaml = "0.8"
+hyper = "0.14"
+serde = "1.0"
 
 [dev-dependencies]
 bollard = "0.10"
