--- a/tests/integration-tests/fatal-error/subgraph.yaml
+++ b/tests/integration-tests/fatal-error/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.2
+specVersion: 0.0.4
 schema:
   file: ./schema.graphql
 dataSources:
@@ -10,14 +10,13 @@ dataSources:
       abi: Contract
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.5
+      apiVersion: 0.0.6
       language: wasm/assemblyscript
       abis:
         - name: Contract
           file: ./abis/Contract.abi
       entities:
         - Call
-      eventHandlers:
-        - event: Trigger(uint16)
-          handler: handleTrigger
+      blockHandlers:
+        - handler: handleBlock
       file: ./src/mapping.ts
