--- a/tests/integration-tests/file-data-sources/subgraph.yaml
+++ b/tests/integration-tests/file-data-sources/subgraph.yaml
@@ -6,7 +6,7 @@ dataSources:
     name: Contract
     network: test
     source:
-      address: "0xCfEB869F69431e42cdB54A4F4f105C19C080A601"
+      address: "0x0000000000000000000000000000000000000000"
       abi: Contract
     mapping:
       kind: ethereum/events
@@ -19,6 +19,9 @@ dataSources:
           file: ./abis/Contract.abi
       blockHandlers:
         - handler: handleBlock
+      eventHandlers:
+        - event: TestEvent(string)
+          handler: handleTestEvent
       file: ./src/mapping.ts
 templates:
   - kind: file/ipfs
