Update protobuf-related dependencies
* Bump prost and prost-types to 0.11.5
* Bump tonic to 0.8.3
* Bump tonic-build to 0.8.4
* Move version definition to workspace Cargo.toml
* Fix CI's proto compilation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: Install lld
-        run: sudo apt-get install -y lld
+        run: sudo apt-get install -y lld protobuf-compiler
 
       - name: Run unit tests
         uses: actions-rs/cargo@v1
@@ -80,7 +80,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: Install lld
-        run: sudo apt-get install -y lld
+        run: sudo apt-get install -y lld protobuf-compiler
 
       - name: Run runner tests
         id: runner-tests-1
@@ -110,7 +110,7 @@ jobs:
           cache-dependency-path: "tests/integration-tests/yarn.lock"
 
       - name: Install lld and jq
-        run: sudo apt-get install -y lld jq
+        run: sudo apt-get install -y lld jq protobuf-compiler
 
       - name: Build graph-node
         uses: actions-rs/cargo@v1
@@ -187,7 +187,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get -y install libpq-dev
+          sudo apt-get -y install libpq-dev protobuf-compiler
       - name: Cargo check (release)
         uses: actions-rs/cargo@v1
         with:
