--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,12 @@ homepage = "https://thegraph.com"
 repository = "https://github.com/graphprotocol/graph-node"
 license = "MIT OR Apache-2.0"
 
+[workspace.dependencies]
+prost = "0.11.5"
+prost-types = "0.11.5"
+tonic = { version = "0.8.3", features = ["tls-roots", "gzip"] }
+tonic-build = { version = "0.8.4", features = ["prost"] }
+
 # Incremental compilation on Rust 1.58 causes an ICE on build. As soon as graph node builds again, these can be removed.
 [profile.test]
 incremental = false
