--- a/chain/near/Cargo.toml
+++ b/chain/near/Cargo.toml
@@ -4,13 +4,13 @@ version.workspace = true
 edition.workspace = true
 
 [build-dependencies]
-tonic-build = { version = "0.7.1", features = ["prost"] }
+tonic-build = { workspace = true }
 
 [dependencies]
 base64 = "0.20"
 graph = { path = "../../graph" }
-prost = "0.10.1"
-prost-types = "0.10.1"
+prost = { workspace = true }
+prost-types = { workspace = true }
 serde = "1.0"
 
 graph-runtime-wasm = { path = "../../runtime/wasm" }
