--- a/graph/Cargo.toml
+++ b/graph/Cargo.toml
@@ -11,7 +11,7 @@ atomic_refcell = "0.1.8"
 bigdecimal = { version = "0.1.0", features = ["serde"] }
 bytes = "1.0.1"
 cid = "0.9.0"
-diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
+diesel = { workspace = true }
 diesel_derives = "1.4"
 chrono = "0.4.23"
 envconfig = "0.10.0"
