--- a/store/postgres/Cargo.toml
+++ b/store/postgres/Cargo.toml
@@ -7,12 +7,13 @@ edition.workspace = true
 async-trait = "0.1.50"
 blake3 = "1.3"
 derive_more = { version = "0.99.17" }
-diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric", "r2d2"] }
-# We use diesel-dynamic-schema straight from git as the project has not
-# made a release as a crate yet
-diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev = "a8ec4fb1" }
-diesel-derive-enum = { version = "1.1", features = ["postgres"] }
-diesel_migrations = "1.3.0"
+diesel = { workspace = true }
+# # We use diesel-dynamic-schema straight from git as the project has not
+# # made a release as a crate yet
+diesel-dynamic-schema = "0.2.0"
+diesel-derive-enum = { workspace = true }
+diesel_migrations = "2.0.0"
+diesel_derives = { workspace = true }
 fallible-iterator = "0.2.0"
 graph = { path = "../../graph" }
 graph-graphql = { path = "../../graphql" }
@@ -27,7 +28,6 @@ rand = "0.8.4"
 serde = "1.0"
 uuid = { version = "1.1.2", features = ["v4"] }
 stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
-diesel_derives = "1.4.1"
 anyhow = "1.0.68"
 git-testament = "0.2.0"
 itertools = "0.10.5"
