--- a/store/test-store/Cargo.toml
+++ b/store/test-store/Cargo.toml
@@ -15,6 +15,6 @@ graph-store-postgres = { path = "../postgres" }
 graph-chain-ethereum= { path = "../../chain/ethereum" }
 lazy_static = "1.1"
 hex-literal = "0.3"
-diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric", "r2d2"] }
+diesel = { workspace = true }
 serde = "1.0"
 prost-types = { workspace = true }
