fix cloud build

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,7 +23,7 @@ ARG TAG_NAME=unknown
 ADD . /graph-node
 
 RUN apt-get update \
-    && apt-get install -y cmake && \
+    && apt-get install -y cmake protobuf-compiler && \
     cd /graph-node && \
     RUSTFLAGS="-g" cargo build --release --package graph-node \
     && cp target/release/graph-node /usr/local/bin/graph-node \
