update readme and create makefile

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ lcov.info
 
 # IDE files
 .vscode/
+.idea/
 
 # Ignore data files created by running the Docker Compose setup locally
 /docker/data/
@@ -29,3 +30,5 @@ lcov.info
 # Built solidity contracts.
 /tests/integration-tests/**/bin
 /tests/integration-tests/**/truffle_output
+
+docker/docker-compose.override.yml
