--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,15 +12,15 @@ services:
       - ipfs
       - postgres
     extra_hosts:
-      - host.docker.internal:host-gateway
+      - 172.18.0.1:host-gateway
     environment:
       postgres_host: postgres
       postgres_user: graph-node
       postgres_pass: let-me-in
       postgres_db: graph-node
       ipfs: 'ipfs:5001'
-      ethereum: 'mainnet:http://host.docker.internal:8545'
       GRAPH_LOG: info
+      GRAPH_ETHEREUM_MAX_BLOCK_RANGE_SIZE: 10000
   ipfs:
     image: ipfs/go-ipfs:v0.10.0
     ports:
@@ -44,6 +44,5 @@ services:
       # <https://github.com/graphprotocol/graph-node/pull/3511>, maybe as a
       # workaround for https://github.com/docker/for-mac/issues/6270?
       PGDATA: "/var/lib/postgresql/data"
-      POSTGRES_INITDB_ARGS: "-E UTF8 --locale=C"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
