--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -7,6 +7,7 @@ edition.workspace = true
 anyhow = "1.0"
 assert-json-diff = "2.0.2"
 async-stream = "0.3.3"
+bollard = "0.10"
 futures = { version = "0.3", features = ["compat"] }
 graph = { path = "../graph" }
 graph-chain-ethereum = { path = "../chain/ethereum" }
@@ -19,16 +20,15 @@ graph-runtime-wasm = { path = "../runtime/wasm" }
 graph-server-index-node = { path = "../server/index-node" }
 graphql-parser = "0.4.0"
 hyper = "0.14"
-port_check = "0.1.5"
-hex = "0.4.3"
-slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
 serde = "1.0"
 serde_yaml = "0.8"
+slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
 tokio = { version = "1.16.1", features = ["rt", "macros", "process"] }
+uuid = { version = "1.2.2", features = ["v4"] }
 
 [dev-dependencies]
-bollard = "0.10"
 anyhow = "1.0.69"
+bollard = "0.10"
 lazy_static = "1.4.0"
 tokio-stream = "0.1"
 serde_yaml = "0.8"
