--- a/store/test-store/devel/docker-compose.yml
+++ b/store/test-store/devel/docker-compose.yml
@@ -1,20 +1,35 @@
 version: '3'
 services:
   ipfs:
-    image: ipfs/go-ipfs:v0.10.0
+    container_name: graph-tests-ipfs
+    image: ipfs/kubo:v0.14.0
     ports:
-      - '5001:5001'
+      - "5001:5001"
+      - "5002:8080"
     volumes:
       - ./data/ipfs:/data/ipfs
+      - ./data/ipfs-export:/export
   postgres:
-    image: postgres
+    container_name: graph-tests-postgres
+    image: postgres:14
     ports:
       - '5432:5432'
-    command: ["postgres", "-cshared_preload_libraries=pg_stat_statements", "-clog_statement=all"]
+    command:
+      [
+        "postgres",
+        "-cshared_preload_libraries=pg_stat_statements",
+        "-clog_statement=all"
+      ]
     environment:
       POSTGRES_USER: graph-node
       POSTGRES_PASSWORD: let-me-in
       POSTGRES_DB: graph-node
+      POSTGRES_INITDB_ARGS: "-E UTF8 --locale=C"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
       - ./initdb.d:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: [ "CMD", "nc", "-z", "localhost", "5432" ]
+      interval: 30s
+      timeout: 10s
+      retries: 15
