Separated OS dep layer from building Rust package
This is done so that we don't need to rebuild rust package
in case of any OS updates.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,12 +22,8 @@ ARG TAG_NAME=unknown
 
 WORKDIR /graph-node
 
-RUN apt-get update \
-    && apt-get install -y cmake protobuf-compiler && \
-    cd /graph-node && \
-    RUSTFLAGS="-g" cargo build --release --package graph-node \
-    && cp target/release/graph-node /usr/local/bin/graph-node \
-    && cp target/release/graphman /usr/local/bin/graphman \
+RUN apt-get update && apt-get install -y cmake protobuf-compiler
+
     # Reduce the size of the layer by removing unnecessary files.
     && cargo clean \
     && objcopy --only-keep-debug /usr/local/bin/graph-node /usr/local/bin/graph-node.debug \
