Add support for Web3Call adapter
- Always prefer web3call adapter for runtime adapter on ethereum if available
- Prevent non call functions on call_only adapters
- Add web3call type configuration
- Require Web3Call endpoint to be archive

--- a/chain/ethereum/Cargo.toml
+++ b/chain/ethereum/Cargo.toml
@@ -27,6 +27,7 @@ graph-runtime-derive = { path = "../../runtime/derive" }
 [dev-dependencies]
 test-store = { path = "../../store/test-store" }
 base64 = "0.20.0"
+graph-mock = { path = "../../mock" }
 
 [build-dependencies]
 tonic-build = { workspace = true }
