--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ prost = "0.11.6"
 prost-types = "0.11.6"
 tonic = { version = "0.8.3", features = ["tls-roots", "gzip"] }
 tonic-build = { version = "0.8.4", features = ["prost"] }
+wasmtime = "5.0.0"
+wasmtime-environ = "5.0.0"
 
 # Incremental compilation on Rust 1.58 causes an ICE on build. As soon as graph node builds again, these can be removed.
 [profile.test]
