--- a/runtime/wasm/Cargo.toml
+++ b/runtime/wasm/Cargo.toml
@@ -19,7 +19,8 @@ strum = "0.21.0"
 strum_macros = "0.21.1"
 bytes = "1.0"
 anyhow = "1.0"
-wasmtime = "0.27.0"
+wasmtime = { workspace = true }
+wasmtime-environ = { workspace = true }
 defer = "0.1"
 never = "0.1"
 
