--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -4,13 +4,13 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-port_check = "0.1.5"
 anyhow = "1.0"
+assert-json-diff = "2.0.2"
+async-stream = "0.3.3"
+bollard = "0.10"
 futures = { version = "0.3", features = ["compat"] }
 graph = { path = "../graph" }
-tokio = { version = "1.16.1", features = ["rt", "macros", "process"] }
 graph-chain-ethereum = { path = "../chain/ethereum" }
-async-stream = "0.3.3"
 graph-node = { path = "../node" }
 graph-core = { path = "../core" }
 graph-mock = { path = "../mock" }
@@ -18,17 +18,17 @@ graph-graphql = { path = "../graphql" }
 graph-store-postgres = { path = "../store/postgres" }
 graph-runtime-wasm = { path = "../runtime/wasm" }
 graph-server-index-node = { path = "../server/index-node" }
-slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
 graphql-parser = "0.4.0"
-hex = "0.4.3"
-serde_yaml = "0.8"
 hyper = "0.14"
 serde = "1.0"
-assert-json-diff = "2.0.2"
+serde_yaml = "0.8"
+slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
+tokio = { version = "1.16.1", features = ["rt", "macros", "process"] }
+uuid = { version = "1.2.2", features = ["v4"] }
 
 [dev-dependencies]
-bollard = "0.10"
 anyhow = "1.0.69"
+bollard = "0.10"
 lazy_static = "1.4.0"
 tokio-stream = "0.1"
 serde_yaml = "0.8"
