--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,9 +170,7 @@ jobs:
       - name: Run Clippy
         uses: actions-rs/cargo@v1
         with:
-          command: clippy
-          # Warnings create a lot of noise, we only print errors.
-          args: --no-deps -- --allow warnings
+          command: check-clippy
 
   release-check:
     name: Build in release mode
