--- a/chain/ethereum/Cargo.toml
+++ b/chain/ethereum/Cargo.toml
@@ -25,9 +25,9 @@ graph-runtime-wasm = { path = "../../runtime/wasm" }
 graph-runtime-derive = { path = "../../runtime/derive" }
 
 [dev-dependencies]
+graph-core = { path = "../../core" }
 test-store = { path = "../../store/test-store" }
 base64 = "0.20.0"
-graph-mock = { path = "../../mock" }
 
 [build-dependencies]
 tonic-build = { workspace = true }
