--- a/store/postgres/Cargo.toml
+++ b/store/postgres/Cargo.toml
@@ -15,6 +15,7 @@ diesel-derive-enum = { version = "1.1", features = ["postgres"] }
 diesel_migrations = "1.3.0"
 fallible-iterator = "0.2.0"
 graph = { path = "../../graph" }
+graph-core = { path = "../../core" }
 graph-graphql = { path = "../../graphql" }
 Inflector = "0.11.3"
 lazy_static = "1.1"
@@ -42,4 +43,3 @@ graphql-parser = "0.4.0"
 test-store = { path = "../test-store" }
 hex-literal = "0.3"
 graph-chain-ethereum = { path = "../../chain/ethereum" }
-graph-mock = { path = "../../mock" }
