--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,6 @@
 [alias]
 # Warnings create a lot of noise, we only print errors.
 check-clippy = "clippy --no-deps -- --allow warnings"
+
+[registries.crates-io]
+protocol = "sparse"
