--- a/store/test-store/Cargo.toml
+++ b/store/test-store/Cargo.toml
@@ -18,3 +18,6 @@ hex-literal = "0.3"
 diesel = { version = "1.4.8", features = ["postgres", "serde_json", "numeric", "r2d2"] }
 serde = "1.0"
 prost-types = { workspace = true }
+
+[dev-dependencies]
+pretty_assertions = "1.3.0"
