--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,7 +19,7 @@ graph-chain-near = { path = "../chain/near" }
 graph-chain-cosmos = { path = "../chain/cosmos" }
 graph-chain-substreams = { path = "../chain/substreams" }
 lazy_static = "1.2.0"
-lru_time_cache = "0.11"
+mini-moka = { version = "0.10", features = ["sync"] }
 semver = "1.0.16"
 serde = "1.0"
 serde_json = "1.0"
@@ -29,6 +29,7 @@ tower = { git = "https://github.com/tower-rs/tower.git", features = ["full"] }
 graph-runtime-wasm = { path = "../runtime/wasm" }
 cid = "0.10.1"
 anyhow = "1.0"
+zstd = "0.6"
 
 [dev-dependencies]
 tower-test = { git = "https://github.com/tower-rs/tower.git" }
@@ -38,7 +39,5 @@ graphql-parser = "0.4.0"
 pretty_assertions = "1.3.0"
 anyhow = "1.0"
 ipfs-api-backend-hyper = "0.6"
-ipfs-api = { version = "0.17.0", features = [
-    "with-hyper-rustls",
-], default-features = false }
+ipfs-api = { version = "0.17.0", features = ["with-hyper-rustls"], default-features = false }
 uuid = { version = "1.3.0", features = ["v4"] }
