--- a/server/graphman/Cargo.toml
+++ b/server/graphman/Cargo.toml
@@ -11,7 +11,7 @@ hyper = "0.14"
 serde = "1.0"
 graph = { path = "../../graph" }
 graph-graphql = { path = "../../graphql" }
-graph-node = { path = "../../node" }
+graphql-utils = { path = "../graphql_utils" }
 
 [dev-dependencies]
 graph-core = { path = "../../core" }
