--- a/server/http/Cargo.toml
+++ b/server/http/Cargo.toml
@@ -11,6 +11,7 @@ hyper = "0.14"
 serde = "1.0"
 graph = { path = "../../graph" }
 graph-graphql = { path = "../../graphql" }
+graphql-utils = { path = "../graphql_utils" }
 
 [dev-dependencies]
 graph-core = { path = "../../core" }
