--- a/server/graphman/Cargo.toml
+++ b/server/graphman/Cargo.toml
@@ -8,10 +8,10 @@ futures = "0.1.21"
 graphql-parser = "0.4.0"
 http = "0.2"
 hyper = "0.14"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+juniper = "0.15.11"
 graph = { path = "../../graph" }
 graph-graphql = { path = "../../graphql" }
 graphql-utils = { path = "../graphql_utils" }
-
-[dev-dependencies]
 graph-core = { path = "../../core" }
+juniper_hyper = "0.8.0"
