build: minify html

--- a/server/http/Cargo.toml
+++ b/server/http/Cargo.toml
@@ -14,3 +14,6 @@ graph-graphql = { path = "../../graphql" }
 
 [dev-dependencies]
 graph-core = { path = "../../core" }
+
+[build-dependencies]
+html-minifier = "4.0.0"
