--- a/docker/cloudbuild.yaml
+++ b/docker/cloudbuild.yaml
@@ -2,7 +2,7 @@ options:
   machineType: "N1_HIGHCPU_32"
 timeout: 1800s
 steps:
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'docker'
   args: ['build', '--target', 'graph-node-build',
          '--build-arg', 'COMMIT_SHA=$COMMIT_SHA',
          '--build-arg', 'REPO_NAME=$REPO_NAME',
@@ -10,7 +10,7 @@ steps:
          '--build-arg', 'TAG_NAME=$TAG_NAME',
          '-t', 'gcr.io/$PROJECT_ID/graph-node-build:$SHORT_SHA',
          '-f', 'docker/Dockerfile', '.']
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'docker'
   args: ['build', '--target', 'graph-node',
          '--build-arg', 'COMMIT_SHA=$COMMIT_SHA',
          '--build-arg', 'REPO_NAME=$REPO_NAME',
@@ -18,7 +18,7 @@ steps:
          '--build-arg', 'TAG_NAME=$TAG_NAME',
          '-t', 'gcr.io/$PROJECT_ID/graph-node:$SHORT_SHA',
          '-f', 'docker/Dockerfile', '.']
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'docker'
   args: ['build', '--target', 'graph-node-debug',
          '--build-arg', 'COMMIT_SHA=$COMMIT_SHA',
          '--build-arg', 'REPO_NAME=$REPO_NAME',
@@ -26,20 +26,20 @@ steps:
          '--build-arg', 'TAG_NAME=$TAG_NAME',
          '-t', 'gcr.io/$PROJECT_ID/graph-node-debug:$SHORT_SHA',
          '-f', 'docker/Dockerfile', '.']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['tag',
-         'gcr.io/$PROJECT_ID/graph-node:$SHORT_SHA',
-         'lutter/graph-node:$SHORT_SHA']
-- name: 'gcr.io/cloud-builders/docker'
-  entrypoint: 'bash'
-  args: ['docker/tag.sh']
-  secretEnv: ['PASSWORD']
-  env:
-    - 'SHORT_SHA=$SHORT_SHA'
-    - 'TAG_NAME=$TAG_NAME'
-    - 'PROJECT_ID=$PROJECT_ID'
-    - 'DOCKER_HUB_USER=$_DOCKER_HUB_USER'
-    - 'BRANCH_NAME=$BRANCH_NAME'
+#- name: 'gcr.io/cloud-builders/docker'
+#  args: ['tag',
+#         'gcr.io/$PROJECT_ID/graph-node:$SHORT_SHA',
+#         'lutter/graph-node:$SHORT_SHA']
+#- name: 'gcr.io/cloud-builders/docker'
+#  entrypoint: 'bash'
+#  args: ['docker/tag.sh']
+#  secretEnv: ['PASSWORD']
+#  env:
+#    - 'SHORT_SHA=$SHORT_SHA'
+#    - 'TAG_NAME=$TAG_NAME'
+#    - 'PROJECT_ID=$PROJECT_ID'
+#    - 'DOCKER_HUB_USER=$_DOCKER_HUB_USER'
+#    - 'BRANCH_NAME=$BRANCH_NAME'
 images:
   - 'gcr.io/$PROJECT_ID/graph-node-build:$SHORT_SHA'
   - 'gcr.io/$PROJECT_ID/graph-node:$SHORT_SHA'
